Small fix for Firefox unable to select the textbox

--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@ td {
 		<div class="col-lg-12" align="center">
 			<div class="form-inline">
 				<div class="input-group">
-					<button type="button" class="btn btn-info" id="" disabled >
+					<button type="button" class="btn btn-info" id="" readonly>
 						Chr and Alias
 					</button>
 				</div>
 					
-				<input type="text" id="IngameChr" class="form-control" style="text-align:center;" disabled>
+				<input type="text" id="IngameChr" class="form-control" style="text-align:center;" readonly>
 					
-				<input type="text" id="IngameAlias" class="form-control" style="text-align:center;" disabled>
+				<input type="text" id="IngameAlias" class="form-control" style="text-align:center;" readonly>
 				<div class="input-group">
 					<button type="button" class="btn btn-success" onclick="document.getElementById('IngameChr').value = ''; document.getElementById('IngameAlias').value = ''">
 						Clear
