Adjust textbox size

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@ td {
 					</button>
 				</div>
 					
-				<input type="text" id="IngameChr" class="form-control" style="text-align:center;" readonly>
+				<input type="text" id="IngameChr" class="form-control" style="text-align:center;" size="5" readonly>
 					
-				<input type="text" id="IngameAlias" class="form-control" style="text-align:center;" readonly>
+				<input type="text" id="IngameAlias" class="form-control" style="text-align:center;" size="30" readonly>
 				<div class="input-group">
 					<button type="button" class="btn btn-success" onclick="document.getElementById('IngameChr').value = ''; document.getElementById('IngameAlias').value = ''">
 						Clear
